--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
--<html>
--<head>
--</head>
--<body>
--	<h1>exde</h1>
--</body>
--</html>
+<html>
+<head>
+	<title>Liams To-Do Page</title>
+	<meta charset="UTF-8">
+	<meta name="name" content="Liam Doolan">
+	<meta name="description" content="Due Uni Work and tasks To-Do">
+</head>
+<body>
+  <h1>Swinburne Tasks</h1>
+    <h3>Before Sunday, May the 27th, 2018</h3>
+      <ul>
+        <li>Finish Assignment D for INF30029 - Information Technology Project Management</li>
+        <li>Finish Doubtfire tasks for ICT30001 - Information Technology Project</li>
+        <li>Finish Presentation for ICT30001 - Information Technology Project</li>
+        <Revision for ENSA Skills Exam (1st of June 2018)</li>
+    </ul>
+</body>
+</html>
