--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Finish Assignment D for INF30029 - Information Technology Project Management</li>
         <li>Finish Doubtfire tasks for ICT30001 - Information Technology Project</li>
         <li>Finish Presentation for ICT30001 - Information Technology Project</li>
-        <Revision for ENSA Skills Exam (1st of June 2018)</li>
+        <li>Revision for ENSA Skills Exam (1st of June 2018)</li>
     </ul>
 </body>
 </html>
