--- a/index.html
+++ b/index.html
@@ -6,13 +6,29 @@
 	<meta name="description" content="Due Uni Work and tasks To-Do">
 </head>
 <body>
-  <h1>Swinburne Tasks</h1>
-    <h3>Before Sunday, May the 27th, 2018</h3>
-      <ul>
-        <li>Finish Assignment D for INF30029 - Information Technology Project Management</li>
-        <li>Finish Doubtfire tasks for ICT30001 - Information Technology Project</li>
-        <li>Finish Presentation for ICT30001 - Information Technology Project</li>
-        <li>Revision for ENSA Skills Exam (1st of June 2018)</li>
-    </ul>
+ 	<h1>Swinburne Tasks</h1>
+	<h3>Before Sunday, May the 27th, 2018</h3>
+	<ul>     
+		<li>Finish Assignment D for INF30029 - Information Technology Project Management</li>
+		<li>Finish Doubtfire tasks for ICT30001 - Information Technology Project</li>
+		<li>Finish Presentation for ICT30001 - Information Technology Project</li>
+		<li>Revision for ENSA Skills Exam (1st of June 2018)</li>
+      	</ul>
+	<h3>Monday, May the 28th, 2018</h3>
+	<ul>
+		<li>Present Rubric Builder for ICT30001</li>
+		<li>Finish Doubtfire Tasks for ICT30001</li>
+		<li>Revise for Skills Exam on Friday, 1st of June</li>
+	</ul>
+	<h3>Friday, June the 1st, 2018</h3>
+	<ul>
+		<li>Skills Exam for ENSA</li>
+		<li>Submit all doubtfire Tasks For ICT30001</li>
+	</ul>
+	<h3>Before Tuesday, 12th of June, 2018</h3>
+	<ul>
+		<li>Study for ENSA Written Wxam</li>
+		<li>ENSA Written Exam, 12th of June</li>
+	</ul>	
 </body>
 </html>
