--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 	<ul>
 		<li>Study for ENSA Written Wxam</li>
 		<li>ENSA Written Exam, 12th of June</li>
-	</ul>	
+	</ul>
+	<h1>Home/Gmod Tasks<h1>
+		<ul>
+			<li>Start learning E2 correctly</li>
+			<li>Play more Gmod</li>
+			<li>Buy Overwatch and Divinity Original Sim: 2</li>
+			<li>Re-format PC into Mint/Win Duel-Boot</li>
+			<li>Fix Boat Power-Steer</li>
+			<li>Fix UE4 Stuff</li>
+		</ul>
 </body>
 </html>
