--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Due Uni Work and tasks To-Do">
 </head>
 <body>
- 	<h1>Swinburne Tasks</h1>
+	<h1><u>Swinburne Tasks</u></h1>
 	<h3>Before Sunday, May the 27th, 2018</h3>
 	<ul>     
 		<li>Finish Assignment D for INF30029 - Information Technology Project Management</li>
@@ -31,7 +31,7 @@
 		<li>ENSA Written Exam, 12th of June</li>
 	</ul>
 	<br>
-	<h1>Home/Gmod Tasks<h1>
+	<h1><u>Home/Gmod Tasks</u></h1>
 		<ul>
 			<li>Start learning E2 correctly</li>
 			<li>Play more Gmod</li>
