--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="description" content="Due Uni Work and tasks To-Do">
 </head>
 <body>
+	<iframe src="https://duckduckgo.com/search.html?duck=yes&prefill=Search DuckDuckGo&bgcolor=CCCCCC&focus=yes" style="overflow:hidden;margin:0;padding:0;width:483px;height:60px;" frameborder="0"></iframe>
+	<br>
 	<h1><u>Swinburne Tasks</u></h1>
 	<h3>Before Sunday, May the 27th, 2018</h3>
 	<ul>     
