--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 	<meta name="name" content="Liam Doolan">
 	<meta name="description" content="Due Uni Work and tasks To-Do">
 </head>
+	<script>
+  (function() {
+    var cx = '016142727962099045197:a3_vuhebsn8';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
 <body>
 	<iframe src="https://duckduckgo.com/search.html?duck=yes&prefill=Search DuckDuckGo&bgcolor=CCCCCC&focus=yes" style="overflow:hidden;margin:0;padding:0;width:483px;height:60px;" frameborder="0"></iframe>
 	<br>
