--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 	<iframe src="https://duckduckgo.com/search.html?duck=yes&prefill=Search DuckDuckGo&bgcolor=CCCCCC&focus=yes" style="overflow:hidden;margin:0;padding:0;width:483px;height:60px;" frameborder="0"></iframe>
 	<br>
+	<form>
+	<fieldset>
+		<legend>Tasks</legend>
 	<h1><u>Swinburne Tasks</u></h1>
 	<h3>Before Sunday, May the 27th, 2018</h3>
 	<ul>     
@@ -42,5 +45,7 @@
 			<li>Fix Boat Power-Steer</li>
 			<li>Fix UE4 Stuff</li>
 		</ul>
+	</fieldset>
+		</form>
 </body>
 </html>
