--- a/index.html
+++ b/index.html
@@ -9,43 +9,48 @@
 	<iframe src="https://duckduckgo.com/search.html?duck=yes&prefill=Search DuckDuckGo&bgcolor=CCCCCC&focus=yes" style="overflow:hidden;margin:0;padding:0;width:483px;height:60px;" frameborder="0"></iframe>
 	<br>
 	<form>
-	<fieldset>
-		<legend>Tasks</legend>
-	<h1><u>Swinburne Tasks</u></h1>
-	<h3>Before Sunday, May the 27th, 2018</h3>
-	<ul>     
-		<li>Finish Assignment D for INF30029 - Information Technology Project Management</li>
-		<li>Finish Doubtfire tasks for ICT30001 - Information Technology Project</li>
-		<li>Finish Presentation for ICT30001 - Information Technology Project</li>
-		<li>Revision for ENSA Skills Exam (1st of June 2018)</li>
-      	</ul>
-	<h3>Monday, May the 28th, 2018</h3>
-	<ul>
-		<li>Present Rubric Builder for ICT30001</li>
-		<li>Finish Doubtfire Tasks for ICT30001</li>
-		<li>Revise for Skills Exam on Friday, 1st of June</li>
-	</ul>
-	<h3>Friday, June the 1st, 2018</h3>
-	<ul>
-		<li>Skills Exam for ENSA</li>
-		<li>Submit all doubtfire Tasks For ICT30001</li>
-	</ul>
-	<h3>Before Tuesday, 12th of June, 2018</h3>
-	<ul>
-		<li>Study for ENSA Written Wxam</li>
-		<li>ENSA Written Exam, 12th of June</li>
-	</ul>
-	<br>
-	<h1><u>Home/Gmod Tasks</u></h1>
-		<ul>
-			<li>Start learning E2 correctly</li>
-			<li>Play more Gmod</li>
-			<li>Buy Overwatch and Divinity Original Sim: 2</li>
-			<li>Re-format PC into Mint/Win Duel-Boot</li>
-			<li>Fix Boat Power-Steer</li>
-			<li>Fix UE4 Stuff</li>
-		</ul>
+		<fieldset>
+		<legend>Swinburne Tasks</legend>
+		<h1><u>Swinburne Tasks</u></h1>
+			<h3>Before Sunday, May the 27th, 2018</h3>
+			<ul>     
+				<li>Finish Assignment D for INF30029 - Information Technology Project Management</li>
+				<li>Finish Doubtfire tasks for ICT30001 - Information Technology Project</li>
+				<li>Finish Presentation for ICT30001 - Information Technology Project</li>
+				<li>Revision for ENSA Skills Exam (1st of June 2018)</li>
+			</ul>
+			<h3>Monday, May the 28th, 2018</h3>
+			<ul>
+				<li>Present Rubric Builder for ICT30001</li>
+				<li>Finish Doubtfire Tasks for ICT30001</li>
+				<li>Revise for Skills Exam on Friday, 1st of June</li>
+			</ul>
+			<h3>Friday, June the 1st, 2018</h3>
+			<ul>
+				<li>Skills Exam for ENSA</li>
+				<li>Submit all doubtfire Tasks For ICT30001</li>
+			</ul>
+			<h3>Before Tuesday, 12th of June, 2018</h3>
+			<ul>
+				<li>Study for ENSA Written Wxam</li>
+				<li>ENSA Written Exam, 12th of June</li>
+			</ul>
+			<br>
+			</fieldset>
+			</form>
+		<h1><u>Home/Gmod Tasks</u></h1>
+		<form>
+		<fieldset>
+		<legend>Home Tasks</legend>
+			<ul>
+				<li>Start learning E2 correctly</li>
+				<li>Play more Gmod</li>
+				<li>Buy Overwatch and Divinity Original Sim: 2</li>
+				<li>Re-format PC into Mint/Win Duel-Boot</li>
+				<li>Fix Boat Power-Steer</li>
+				<li>Fix UE4 Stuff</li>
+			</ul>
 	</fieldset>
-		</form>
+	</form>
 </body>
 </html>
