--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 			<br>
 			</fieldset>
 			</form>
-		<h1><u>Home/Gmod Tasks</u></h1>
 		<form>
 		<fieldset>
-		<legend>Home Tasks</legend>
+		<legend>Home/Gmod Tasks</legend>
+		<h1><u>Home/Gmod Tasks</u></h1>
 			<ul>
 				<li>Start learning E2 correctly</li>
 				<li>Play more Gmod</li>
