--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Due Uni Work and tasks To-Do">
 </head>
 <body>
-	<iframe src="https://duckduckgo.com/search.html?duck=yes&prefill=Search DuckDuckGo&bgcolor=CCCCCC&focus=yes" style="overflow:hidden;margin:0;padding:0;width:483px;height:60px;" frameborder="0"></iframe>
+	<iframe src="https://duckduckgo.com/search.html?width=300&duck=yes&prefill=Shitpost Online exde&bgcolor=cccccc&focus=yes" style="overflow:hidden;margin:0;padding:0;width:433px;height:60px;" frameborder="0"></iframe>
 	<br>
 	<form>
 		<fieldset>
