--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="name" content="Liam Doolan">
 	<meta name="description" content="Due Uni Work and tasks To-Do">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<iframe src="https://duckduckgo.com/search.html?width=300&duck=yes&prefill=Shitpost Online exde&bgcolor=cccccc&focus=yes" style="overflow:hidden;margin:0;padding:0;width:433px;height:60px;" frameborder="0"></iframe>
@@ -40,6 +41,7 @@
 			</form>
 		<form>
 		<fieldset>
+			<div class="hometask">
 		<legend>Home/Gmod Tasks</legend>
 		<h1><u>Home/Gmod Tasks</u></h1>
 			<ul>
@@ -52,5 +54,6 @@
 			</ul>
 	</fieldset>
 	</form>
+			</div>
 </body>
 </html>
