--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
 	<h1>that face when she gives your the s i p p</h1>
-	<p><a href="/images/image.png">yeet</a></p>
+	<body background="/images/image.png">
 </body>
