--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>H Y D R A T I O N  S T A T I O N</title>
 	<meta charset="UTF-8">
 	<meta name="name" content="Liam Doolan">
