--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
 	<br>
 	<h1>that face when she gives your the s i p p</h1>
+	<br>
 	<body background="/images/image.png">
+	<img src="images/water.jpg" alt="drank">
+		
 </body>
