--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<h1>that face when she gives your the s i p p</h1>
 	<br>
 	<body background="/images/image.png">
+		<div>
 	<img src="images/water.jpg" alt="drank">
+		</div>
 		
 </body>
