--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 	<br>
 	<h1>that face when she gives your the s i p p</h1>
-	<h4>Website unfortunately made by Tenndex exde</h4>
+	<br>
+	<p>Website unfortunately made by Tenndex exde<p>
 	<hidden>
 		<audio controls autoplay>
   <source src="DontStopMeNow.mp3" type="audio/mpeg">
