--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<br>
 	<h1>that face when she gives your the s i p p</h1>
+	<p>Website unfortunately made by Tenndex exde</p>
 	<br>
 	<hidden>
 		<audio controls autoplay>
