--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <body>
 	<br>
 	<h1>that face when she gives your the s i p p</h1>
+	<p>Website unfortunately made by Tenndex exde</p>
 	<br>
-	<hidden>
 		<audio controls autoplay>
   <source src="DontStopMeNow.mp3" type="audio/mpeg">
   <p>If you can read this, your browser does not support the audio element.</p>
 </audio>
-	</hidden>
 	<br>
 	<body background="/images/image.png">
 		<div>
