--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 	<br>
-	<h1>that face when she gives your the s i p p</h1>
+	<h1>That face when she gives your the s i p p</h1>
+	<h3>Remember to stay H Y D R A T E D boi
 	<p>Website unfortunately made by Tenndex exde</p>
 	<br>
 		<audio controls autoplay>
