--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </audio>
 	<br>
 	<body background="/images/image.png">
-		<div>
-	<img src="images/water.jpg" alt="drank">
-		</div>
+	
+	<img src="images/water.jpg" alt="drank" class="spin">
+		
 		
 </body>
