--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<br>
 	<h1>That face when she gives your the s i p p</h1>
-	<h3>Remember to stay H Y D R A T E D boi
+	<h3>Remember to stay H Y D R A T E D boi</h3>
 	<p>Website unfortunately made by Tenndex exde</p>
 	<br>
 		<audio controls autoplay>
