--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<br>
 	<body background="/images/image.png">
 	
-	<img src="images/water.jpg" alt="drank" class="spin" align="middle">
+	<img src="images/water.jpg" alt="drank" class="spin">
 		
 		
 </body>
