--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </audio>
 	<br>
 	<body background="/images/image.png">
-	
-	<img src="images/water.jpg" alt="drank" class="spin">
+	<div class="spin">
+	<img src="images/water.jpg" alt="drank">
+		</div>
 		
 		
 </body>
