--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </audio>
 	<br>
 	<body background="/images/image.png">
-	<div class="spin">
-	<img src="images/water.jpg" alt="drank">
-		</div>
+	
+	<img src="images/water.jpg" alt="drank" class="image">
+	
 		
 		
 </body>
