Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Evil Zombies Waiting List
+    <title>Evil Zombies Waiting List</title>
   </head>
   <body>
    <h1>Evil Zombies Waiting List</h1>
