--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
   <body>
    <h1>Evil Zombies Waiting List</h1>
    <h3>Please read instructions before proceeding</h3>
+    <form>  
+      <legend>
+      Gamertag:<br>
+      <input type="text" name="gametag"><br>
+      Streamer Name:<br>
+      <input type="text" name="streamname">
+      </legend>
+    </form>
    </body>
 </html>
