--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       Gamertag:<br>
       <input type="text" name="gametag"><br>
       Streamer Name:<br>
-      <input type="text" name="streamname">
+      <input type="radio" name="gender" value="Lisa" checked> Male<br>
+      <input type="radio" name="gender" value="Applez"> Female<br>
+      <input type="radio" name="gender" value="Wench"> Other
       </legend>
     </form>
    </body>
