--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       Gamertag:<br>
       <input type="text" name="gametag"><br>
       Streamer Name:<br>
-      <input type="radio" name="gender" value="Lisa" checked> Male<br>
-      <input type="radio" name="gender" value="Applez"> Female<br>
-      <input type="radio" name="gender" value="Wench"> Other
+      <input type="radio" name="gender" value="Lisa" checked> Applezzz<br>
+      <input type="radio" name="gender" value="Applez"> W3nch<br>
+      <input type="radio" name="gender" value="Wench"> xZOMBIExLISAx
       </legend>
     </form>
    </body>
