--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <form>  
       <legend>
       Gamertag:<br>
-      <input type="text" name="gametag"><br>
+      <input type="text" name="gametag"><br><br>
       Streamer Name:<br>
       <input type="radio" name="gender" value="Lisa" checked> Applezzz<br>
       <input type="radio" name="gender" value="Applez"> W3nch<br>
