--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       Gamertag:<br>
       <input type="text" name="gametag"><br><br>
       Streamer Name:<br>
-      <input type="radio" name="gender" value="Lisa" checked> Applezzz<br>
-      <input type="radio" name="gender" value="Applez"> W3nch<br>
-      <input type="radio" name="gender" value="Wench"> xZOMBIExLISAx
+      <input type="radio" name="gender" value="Lisa" checked> Applezzz  <br>
+      <input type="radio" name="gender" value="Applez"> W3nch <br>
+      <input type="radio" name="gender" value="Wench"> xZOMBIExLISAx <br>
+      <input type="submit" value="Submit">
       </legend>
     </form>
    </body>
