--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Gamertag:<br>
       <input type="text" name="gametag"><br><br>
       Streamer Name:<br>
-      <input type="radio" name="gender" value="Lisa" checked> Applezzz  <br>
+      <input type="radio" name="gender" value="Lisa" checked> evilapplezzzz  <br>
       <input type="radio" name="gender" value="Applez"> W3nch <br>
       <input type="radio" name="gender" value="Wench"> xZOMBIExLISAx <br>
       <input type="submit" value="Submit">
