--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    <h1>Evil Zombies Waiting List</h1>
    <h3>Please read instructions before proceeding</h3>
     <form>  
-      <legend>
+      <fieldset>
+      <legend>Submission Form</legend>
       Gamertag:<br>
       <input type="text" name="gametag"><br><br>
       Streamer Name:<br>
@@ -14,7 +15,7 @@
       <input type="radio" name="gender" value="Applez"> W3nch <br>
       <input type="radio" name="gender" value="Wench"> xZOMBIExLISAx <br>
       <input type="submit" value="Submit">
-      </legend>
+      </fieldset>
     </form>
    </body>
 </html>
