--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       Gamertag:<br>
       <input type="text" name="gametag"><br><br>
       Streamer Name:<br>
-      <input type="radio" name="gender" value="Lisa" checked> evilapplezzzz  <br>
-      <input type="radio" name="gender" value="Applez"> W3nch <br>
-      <input type="radio" name="gender" value="Wench"> xZOMBIExLISAx <br>
+      <input type="radio" name="gender" value="apple" checked> evilapplezzzz  <br>
+      <input type="radio" name="gender" value="w3nch"> evilW3nch <br>
+      <input type="radio" name="gender" value="lisa"> xZOMBIExLISAx <br>
+      <input type="radio" name="gender" value="blackdog"> blackdog82002<br>
       <input type="submit" value="Submit">
       </fieldset>
     </form>
