--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <input type="radio" name="gender" value="w3nch"> evilW3nch <br>
       <input type="radio" name="gender" value="lisa"> xZOMBIExLISAx <br>
       <input type="radio" name="gender" value="blackdog"> blackdog82002<br>
+      <input type="radio" name="gender" value="tenndex"> TheRealTenndex<br>
       <input type="submit" value="Submit">
       </fieldset>
     </form>
