--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
    <h1>Evil Zombies Waiting List</h1>
    <h3>Please read instructions before proceeding</h3>
+   <body background="background.jpg">
     <form>  
       <fieldset>
       <legend>Submission Form</legend>
