--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <h1>Evil Zombies Waiting List</h1>
    <h3>Please read instructions before proceeding</h3>
     <form>  
-      <fieldset>
+      <fieldset style="width:400px">
       <legend>Submission Form</legend>
       Gamertag:<br>
       <input type="text" name="gametag"><br><br>
