--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       Gamertag:<br>
       <input type="text" name="gametag"><br><br>
       Streamer Name:<br>
-      <input type="radio" name="gender" value="apple" checked> evilapplezzzz  <br>
-      <input type="radio" name="gender" value="w3nch"> evilW3nch <br>
-      <input type="radio" name="gender" value="lisa"> xZOMBIExLISAx <br>
-      <input type="radio" name="gender" value="blackdog"> blackdog82002<br>
-      <input type="radio" name="gender" value="tenndex"> TheRealTenndex<br>
+      <input type="radio" name="streamer" value="apple" checked> evilapplezzzz<br>
+      <input type="radio" name="streamer" value="w3nch"> evilW3nch<br>
+      <input type="radio" name="streamer" value="lisa"> xZOMBIExLISAx <br>
+      <input type="radio" name="streamer" value="blackdog"> blackdog82002<br>
+      <input type="radio" name="streamer" value="tenndex"> TheRealTenndex<br>
       <input type="submit" value="Submit">
       </fieldset>
     </form>
