--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
    <h1>Evil Zombies Waiting List</h1>
    <h3>Please read instructions before proceeding</h3>
+    <div class="first">
     <form>  
       <fieldset style="width:400px">
       <legend>Submission Form</legend>
@@ -20,5 +21,6 @@
       <input type="submit" value="Submit">
       </fieldset>
     </form>
+    </div>
    </body>
 </html>
