--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
       function myFunction() {
       document.getElementById("frm1").submit();
-      document.getElementById("list").innerHTML = "Test Text"; 
+      document.getElementById("list").innerHTML = gametag; 
       }
 </script>
    <div class="first">
