--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   </head>
   <body>
     <script>
-      function myFunction() {
-      document.getElementById("frm1").submit();
-      document.getElementById("list").innerHTML = gametag; 
+      function myFunction()
+      var x = document.getElementById("gametag").value;
+      var y = document.getElementById("streamname").value;
+      document.getElementById("list").innerHTML = x;
+      document.getElementById("list").innerHTML = y;
       }
 </script>
    <div class="first">
@@ -17,17 +19,18 @@
       <fieldset style="width:400px">
       <legend>Submission Form</legend>
       Gamertag:<br>
-      <input type="text" name="gametag"><br><br>
+      <input type="text" name="gametag" id="gametag" ><br><br>
       Streamer Name:<br>
-      <input type="radio" name="streamer" value="apple" checked> evilapplezzzz<br>
-      <input type="radio" name="streamer" value="w3nch"> evilW3nch<br>
-      <input type="radio" name="streamer" value="lisa"> xZOMBIExLISAx <br>
-      <input type="radio" name="streamer" value="blackdog"> blackdog82002<br>
-      <input type="radio" name="streamer" value="tenndex"> TheRealTenndex<br>
+      <input type="radio" name="streamer" id="streamname" value="apple" checked> evilapplezzzz<br>
+      <input type="radio" name="streamer" id="streamname" value="w3nch"> evilW3nch<br>
+      <input type="radio" name="streamer" id="streamname" value="lisa"> xZOMBIExLISAx <br>
+      <input type="radio" name="streamer" id="streamname" value="blackdog"> blackdog82002<br>
+      <input type="radio" name="streamer" id="streamname" value="tenndex"> TheRealTenndex<br>
       <input type="button" onclick="myFunction()" value="Submit">
       </fieldset>
     </form>
     </div>
     <p id="list">
+    <p id="list2">
    </body>
 </html>
