--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       var x = document.getElementById("gametag").value;
       var y = document.getElementById("streamname").value;
       document.getElementById("list").innerHTML = x;
-      document.getElementById("list").innerHTML = y;
+      document.getElementById("list2").innerHTML = y;
       }
 </script>
    <div class="first">
@@ -31,6 +31,7 @@
     </form>
     </div>
     <p id="list">
+      <br>
     <p id="list2">
    </body>
 </html>
