--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       var y = document.getElementById("streamname").value;
       document.getElementById("list").innerHTML = x;
       document.getElementById("list2").innerHTML = y;
+      window.alert(Variables should of printed);
       }
 </script>
    <div class="first">
