--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="Vantoorens Website">
 		<meta name="keywords" content="Twitch, Vantooren, Playhouse">
-		<meta name="author" content="John Doe">
+		<meta name="author" content="Tenndex">
+		<link rel="stylesheet" href="/css/style.css">
 	</head>
-	<body>
+	<body id="about">
 		<h1>Vantooren - Replace with Image</h1>
 		<nav>
-			<a href="index.html">About</a> 
-			<a href="twitch.html">Twitch</a> 
-			<a href="playhouse.html">Playhouse</a> 
-			<a href="social_media.html">Social Media</a> 
-			<a href="sponsors.html">Sponsors</a>
-			<a href="affiliations.html">Affiliations</a>
-			<a href="contact.html">Contact</a> 	
+			<a href="index.html" id="aboutnav">About</a> 
+			<a href="twitch.html" id="twitchnav">Twitch</a> 
+			<a href="playhouse.html" id="playhousenav">Playhouse</a> 
+			<a href="social_media.html" id="social_medianav">Social Media</a> 
+			<a href="sponsors.html" id="sponsorsnav">Sponsors</a>
+			<a href="affiliations.html" id="affiliationsnav">Affiliations</a>
+			<a href="contact.html" id="contactnav">Contact</a> 	
 		</nav>
 		<p>Placeholder Text for about page</p>
 	</body>
